@@ -34,7 +34,25 @@ elsif ($in{'cipher_list_def'} == 2) {
 	$miniserv{'ssl_cipher_list'} = $strong_ssl_ciphers;
 	}
 elsif ($in{'cipher_list_def'} == 3) {
+	# Check for PFS support
+	eval "use Net::SSLeay";
+	$Net::SSLeay::VERSION >= 1.57 ||
+		&error(&text('ssl_epfsversion', $Net::SSLeay::VERSION, 1.57));
+
 	$miniserv{'ssl_cipher_list'} = $pfs_ssl_ciphers;
+	$miniserv{'dhparams_file'} ||= "$config_directory/dhparams.pem";
+	if (!-r $miniserv{'dhparams_file'}) {
+		# Generate file needed for PFS
+		my $out = &backquote_command(
+			"openssl dhparam -out ".
+			quotemeta($miniserv{'dhparams_file'})." 2048 2>&1");
+		if ($?) {
+			&error(&text('ssl_edhparams',
+				     "<pre>".&html_escape($out)."</pre>"));
+			}
+		&set_ownership_permissions(
+			undef, undef, 700, $miniserv{'dhparams_file'});
+		}
 	}
 else {
 	$in{'cipher_list'} =~ /^\S+$/ || &error($text{'ssl_ecipher_list'});
