@@ -369,6 +369,8 @@ ssl_clist=Listed ciphers
 ssl_ecipher_list=Missing or invalid cipher list - must be like <tt>HIGH:-SSLv2:-aNULL</tt>
 ssl_auto=Detect automatically
 ssl_eversion=Missing or invalid version number
+ssl_edhparams=Failed to generate PFS DH params file : $1
+ssl_epfsversion=PFS requires Net::SSLeay version $2, but this system only has version $1
 ssl_saveheader=Upload existing key
 ssl_privkey=Private key text
 ssl_fromcsr=This private key was generated using the <b>Certificate Signing Request</b> tab. You should enter the certificate below that was supplied by your CA in response to the CSR.
